# orca_rank

./: .gitignore  README.md  pyproject.toml  requirements-chtc-torch-example.txt  requirements.txt  run_experiment.py
configs/: README.txt
htcondor/: README_CHTC.txt  run_job.sh  submit_example.sub  submit_gpu_smoke.sub
orca_rank/: __init__.py  config.py
orca_rank/data/: alignment_tokenize.py  collate.py  math_datasets.py
orca_rank/eval/: gsm8k_em.py
orca_rank/models/: pythia_lm.py
orca_rank/training/: gpu_utils.py  otdd_api.py  stage_a.py  stage_b.py
scripts/: aggregate_metrics.py  analyze_chtc_tarballs.py  pack_chtc.sh  verify_otdd.py
