[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orca_rank"
version = "0.1.0"
description = "Align-then-LoRA GSM8K pilot using vendored OTDD"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["orca_rank*"]
